kubernetes/cluster/active/apps/mealie/overlays/prod/resources/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mealie
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Recipe manager and meal planner.
    gethomepage.dev/group: Productivity
    gethomepage.dev/icon: mealie.svg
    gethomepage.dev/name: Mealie
    gethomepage.dev/pod-selector: "app.kubernetes.io/instance=mealie"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: http-gateway-api
      namespace: istio-ingress
  hostnames:
    - "mealie.${FQDN_01}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: mealie
          namespace: mealie
          port: 10018
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
